mejorando los componentes y aplicandoles props (navigation components)

--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,15 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+
+    <title>Escuela Virtual</title>
+
   </head>
   <body>
-    <noscript>Porfavor habilita la ejecucion de javascript.</noscript>
+    <noscript
+      >Porfavor habilita la ejecucion de javascript para que este sitio puea
+      funcionar correctamente</noscript
+    >
     <div id="root"></div>
   </body>
 </html>
