CU-1z5p0a - Átomo tipos de letra y paleta de colores - Agregando colores primarios y secundarios

--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,17 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/icons/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#6705c6" />
     <meta
       name="description"
       content="La mejor plataforma de educacion online"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/icons/manifest.json" />
 
     <title>Escuela Virtual</title>
-
   </head>
   <body>
     <noscript
