fix(files): fix code and files

--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta
+      name="description"
+      content="La mejor plataforma de educacion online"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/img/logo192.png" />
+    <link rel="icon" href="%PUBLIC_URL%/img/logo512.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-<head>
-	<link rel="icon" href="%PUBLIC_URL%/img/favicon.ico" />
-	<meta name="description" content="La mejor plataforma de educacion online" />
-	<link rel="apple-touch-icon" href="%PUBLIC_URL%/img/logo192.png" />
-	<link rel="manifest" href="%PUBLIC_URL%/img/manifest.json" />
+    <title>Escuela Virtual</title>
+  </head>
 
-	<title>Escuela Virtual</title>
-</head>
-
-<body>
-	<noscript>Por favor habilita la ejecucion de javascript para que este sitio pueda
-		funcionar correctamente</noscript>
-	<div id="root"></div>
-</body>
-
+  <body>
+    <noscript>
+      Por favor habilita la ejecucion de javascript para que este sitio pueda
+      funcionar correctamente
+    </noscript>
+    <div id="root"></div>
+  </body>
 </html>
